# ------------
# Build tests
# ------------

unset(LINK_LIBRARIES)

if (CWP_ENABLE_SHARED)
  list(APPEND LINK_LIBRARIES cwp_shared)
else ()
  list(APPEND LINK_LIBRARIES cwp_static)
endif ()

if (CWP_ENABLE_Fortran)
  if (CWP_ENABLE_SHARED)
    list(APPEND LINK_LIBRARIES cwpf_shared)
  else ()
    list(APPEND LINK_LIBRARIES cwpf_static)
  endif ()
endif ()

if (CWP_ENABLE_EXTERNAL_PDM)
  if (CWP_ENABLE_SHARED)
    list(APPEND LINK_LIBRARIES
          pdm::pdm_mpi_shared
          pdm::pdm_shared)
    if (CWP_ENABLE_Fortran)
      list(APPEND LINK_LIBRARIES
          pdm::pdmf_shared)
    endif ()
  else ()
    list(APPEND LINK_LIBRARIES
          pdm::pdm_mpi_static
          pdm::pdm_static)
    if (CWP_ENABLE_Fortran)
      list(APPEND LINK_LIBRARIES
          pdm::pdmf_static)
    endif ()
  endif ()
else ()
  if (CWP_ENABLE_SHARED)
    list(APPEND LINK_LIBRARIES
          pdm_shared)
    if (CWP_ENABLE_Fortran)
      list(APPEND LINK_LIBRARIES
          pdmf_shared)
    endif ()
  endif ()
endif ()

file (COPY ${CMAKE_CURRENT_SOURCE_DIR}/meshes DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

# Add test
# --------

if (CWP_ENABLE_PYTHON_BINDINGS)
  set (CTEST_ENVIRONMENT
       "LD_LIBRARY_PATH=${LD_LIBRARY_PATH}"
       "PYTHONPATH=${CWP_BINARY_DIR}/Cython:${PYTHONPATH}"
       "PATH=${CWP_BINARY_DIR}/bin:${PATH}")
else()
  set (CTEST_ENVIRONMENT
       "LD_LIBRARY_PATH=${LD_LIBRARY_PATH}"
       "PATH=${CWP_BINARY_DIR}/bin:${PATH}")
endif()

include(TestCreate)

test_c_create (c_new_api 10 CWP_LIST_TEST CWP_LIST_NRANK)
test_c_create (c_new_api_c_poly_block 2 CWP_LIST_TEST CWP_LIST_NRANK)
test_c_create (c_new_api_cellface_set_block 2 CWP_LIST_TEST CWP_LIST_NRANK)
test_c_create (c_new_api_surf_P1P0_P0P1 2 CWP_LIST_TEST CWP_LIST_NRANK)
test_c_create (c_new_api_surf_P1P0_P0P1_dynamic 6 CWP_LIST_TEST CWP_LIST_NRANK)
test_c_create (c_new_api_surf_P1P0_P0P1_without_part 2 CWP_LIST_TEST CWP_LIST_NRANK)
test_c_create (c_new_api_global_data 4 CWP_LIST_TEST CWP_LIST_NRANK)
test_c_create (c_new_api_part_data 4 CWP_LIST_TEST CWP_LIST_NRANK)
test_c_create (c_new_api_part_data2 2 CWP_LIST_TEST CWP_LIST_NRANK)
test_c_create (c_new_api_part_data_two_exch 2 CWP_LIST_TEST CWP_LIST_NRANK)
test_c_create (c_new_api_surf_P0P0 2 CWP_LIST_TEST CWP_LIST_NRANK)
test_c_create (c_new_api_surf_P0P0_disjoint_comm 2 CWP_LIST_TEST CWP_LIST_NRANK)
test_c_create (c_new_api_surf_P0P0_without_part 3 CWP_LIST_TEST CWP_LIST_NRANK)
test_c_create (c_new_api_user_interp_fct 2 CWP_LIST_TEST CWP_LIST_NRANK)
test_c_create (c_new_api_reverse_knn 2 CWP_LIST_TEST CWP_LIST_NRANK)
test_c_create (c_new_api_linear_P1P0_P0P1 2 CWP_LIST_TEST CWP_LIST_NRANK)
test_c_create (c_new_api_multiple 2 CWP_LIST_TEST CWP_LIST_NRANK)
test_c_create (c_new_api_variable_mesh 2 CWP_LIST_TEST CWP_LIST_NRANK)
test_c_create (c_new_api_param 2 CWP_LIST_TEST CWP_LIST_NRANK)
test_c_create (c_new_api_empty_parts 4 CWP_LIST_TEST CWP_LIST_NRANK)
test_c_create (c_new_to_old_api 2 CWP_LIST_TEST CWP_LIST_NRANK)
test_c_create (c_new_vs_old_vol_sendrecv 2 CWP_LIST_TEST CWP_LIST_NRANK)
test_c_create (c_new_to_old_api_surf_P1P1 2 CWP_LIST_TEST CWP_LIST_NRANK)
test_c_create (c_new_api_vol 2 CWP_LIST_TEST CWP_LIST_NRANK)
test_c_create (c_linear_coupling 2 CWP_LIST_TEST CWP_LIST_NRANK)
test_c_create (c_surf_location_triaP2 2 CWP_LIST_TEST CWP_LIST_NRANK)
test_c_create (c_surf_location_curvetriaP2 2 CWP_LIST_TEST CWP_LIST_NRANK)
test_c_create (c_surf_coupling_P1P1_micron_polygon 2 CWP_LIST_TEST CWP_LIST_NRANK)
test_c_create (c_surf_coupling_P1P1_polygon 2 CWP_LIST_TEST CWP_LIST_NRANK)
test_c_create (c_surf_coupling_P1P1_polygon2 2 CWP_LIST_TEST CWP_LIST_NRANK)
test_c_create (c_surf_coupling_P1P1_polygon_with_external_points 2 CWP_LIST_TEST CWP_LIST_NRANK)
test_c_create (c_surf_coupling_P1P1 2 CWP_LIST_TEST CWP_LIST_NRANK)
test_c_create (c_surf_coupling_P1P0_P0P1 2 CWP_LIST_TEST CWP_LIST_NRANK)
test_c_create (c_surf_coupling_P1P0_P0P1_savedisk 2 CWP_LIST_TEST CWP_LIST_NRANK)
test_c_create (c_surf_coupling_P1P0_P0P1_savememory 2 CWP_LIST_TEST CWP_LIST_NRANK)
test_c_create (c_surf_coupling_P1P1_asynchronous 2 CWP_LIST_TEST CWP_LIST_NRANK)
test_c_create (c_surf_coupling_user_target_points 2 CWP_LIST_TEST CWP_LIST_NRANK)
test_c_create (c_surf_coupling_user_interpolation 2 CWP_LIST_TEST CWP_LIST_NRANK)
test_c_create (c_surf_coupling_vector_exchange 2 CWP_LIST_TEST CWP_LIST_NRANK)
test_c_create (c_surf_coupling_output_error 2 CWP_LIST_TEST CWP_LIST_NRANK)
test_c_create (c_surf_coupling_simple_location 2 CWP_LIST_TEST CWP_LIST_NRANK)
test_c_create (c_surf_without_partitioning_coupling 2 CWP_LIST_TEST CWP_LIST_NRANK)
test_c_create (c_surf_without_partitioning_coupling2 2 CWP_LIST_TEST CWP_LIST_NRANK)
test_c_create (c_surf_sequential_coupling 2 CWP_LIST_TEST CWP_LIST_NRANK)
test_c_create (c_vol_coupling_P1P1 2 CWP_LIST_TEST CWP_LIST_NRANK)
test_c_create (c_vol_coupling_P1P1_with_external_points 2 CWP_LIST_TEST CWP_LIST_NRANK)
test_c_create (c_vol_coupling_micro_polyhedra_P1P1 2 CWP_LIST_TEST CWP_LIST_NRANK)
test_c_create (c_vol_coupling_polyhedra_P1P1 2 CWP_LIST_TEST CWP_LIST_NRANK)
test_c_create (c_vol_coupling_polyhedra_P1P1_with_external_points 2 CWP_LIST_TEST CWP_LIST_NRANK)
if (NOT CWP_ENABLE_HIDE_PDM_SYMBOLS)
  test_c_create (c_new_vs_old_vol 2 CWP_LIST_TEST CWP_LIST_NRANK)
  test_c_create (c_new_vs_old_HO 2 CWP_LIST_TEST CWP_LIST_NRANK)
  test_c_create (c_new_api_multiblock 4 CWP_LIST_TEST CWP_LIST_NRANK)
  test_c_create (c_new_api_wind_turbine_blade 2 CWP_LIST_TEST CWP_LIST_NRANK)
endif()

if (CWP_ENABLE_CLIENT_SERVER)
  test_c_create (c_client_server_main 2 CWP_LIST_TEST CWP_LIST_NRANK)
  test_c_create (c_client_server_new_api_cellface_set_block 2 CWP_LIST_TEST CWP_LIST_NRANK)
  test_c_create (c_client_server_new_api_c_poly_block 2 CWP_LIST_TEST CWP_LIST_NRANK)
  test_c_create (c_client_server_new_api_surf_P1P0_P0P1 4 CWP_LIST_TEST CWP_LIST_NRANK)
  test_c_create (c_client_server_new_api_multiple 2 CWP_LIST_TEST CWP_LIST_NRANK)
  test_c_create (c_client_server_new_api_deformable 2 CWP_LIST_TEST CWP_LIST_NRANK)
  test_c_create (c_client_server_new_api_variable_mesh 2 CWP_LIST_TEST CWP_LIST_NRANK)
  add_dependencies(c_client_server_main cwp_server)
  add_dependencies(c_client_server_new_api_cellface_set_block cwp_server)
  add_dependencies(c_client_server_new_api_c_poly_block cwp_server)
  add_dependencies(c_client_server_new_api_surf_P1P0_P0P1 cwp_server)
  add_dependencies(c_client_server_new_api_multiple cwp_server)
  add_dependencies(c_client_server_new_api_deformable cwp_server)
  add_dependencies(c_client_server_new_api_variable_mesh cwp_server)
  if (NOT CWP_ENABLE_HIDE_PDM_SYMBOLS)
    test_c_create (c_client_server_new_api_wind_turbine_blade 2 CWP_LIST_TEST CWP_LIST_NRANK)
    add_dependencies(c_client_server_new_api_wind_turbine_blade cwp_server)
  endif()
endif()

if (CWP_ENABLE_Fortran)
  test_fortran_create (fortran_new_api 10 CWP_LIST_TEST CWP_LIST_NRANK)
  test_fortran_create (fortran_new_api_surf 2 CWP_LIST_TEST CWP_LIST_NRANK)
  test_fortran_create (fortran_new_api_surf2 2 CWP_LIST_TEST CWP_LIST_NRANK)
  test_fortran_create (fortran_surf_P1P1 2 CWP_LIST_TEST CWP_LIST_NRANK)
  test_fortran_create (fortran_surf_P1P1_savememory 2 CWP_LIST_TEST CWP_LIST_NRANK)
  test_fortran_create (fortran_new_api_empty_parts 4 CWP_LIST_TEST CWP_LIST_NRANK)
endif()

if (CWP_ENABLE_PYTHON_BINDINGS)
  test_python_create (python_api 2 CWP_LIST_TEST CWP_LIST_NRANK)
  test_python_create (python_new_api 2 CWP_LIST_TEST CWP_LIST_NRANK)
  test_python_create (python_new_api_surf 2 CWP_LIST_TEST CWP_LIST_NRANK)
  test_python_create (python_new_api_multiple_field_with_callback 2 CWP_LIST_TEST CWP_LIST_NRANK)
  test_python_create (python_new_api_multiblock_2d 2 CWP_LIST_TEST CWP_LIST_NRANK)
  test_python_create (python_new_api_multiblock_3d 2 CWP_LIST_TEST CWP_LIST_NRANK)
  test_python_create (python_new_api_multiple_orders 2 CWP_LIST_TEST CWP_LIST_NRANK)
  test_python_create (python_perfo_hpdc24 2 CWP_LIST_TEST CWP_LIST_NRANK)
  test_python_create (python_new_api_empty_parts 4 CWP_LIST_TEST CWP_LIST_NRANK)

  if (CWP_ENABLE_CLIENT_SERVER)
    test_python_create (python_new_api_client_server 2 CWP_LIST_TEST CWP_LIST_NRANK)
    add_dependencies(python_new_api_client_server cwp_server)
  endif()
endif()

add_subdirectory(tutorial)

set (CWP_LIST_TEST  ${CWP_LIST_TEST}  PARENT_SCOPE )
set (CWP_LIST_NRANK ${CWP_LIST_NRANK} PARENT_SCOPE )

# unused/non-existent tests
#if (CWP_ENABLE_CLIENT_SERVER)
#  test_c_create (c_ip_io 1)
#endif ()
#test_c_create (c_new_to_old_api_surf_P1P0_P0P1_poly 2 CWP_LIST_TEST CWP_LIST_NRANK)
#test_c_create (c_ho_palm 2)
#test_c_create (c_surf_coupling_P1P0_P0P1_surf_gen 2)
#test_c_create (c_surf_coupling_P1P0_P0P1_curv 2)
